--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,9 +28,8 @@ body {
     top: 0;
     right: 0;
     bottom: 0;
-    // width: 100%;
-    // height: auto;
     z-index: -10;
+    // Designed by Freepik
     background: url("../assets/mobile.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -38,6 +37,7 @@ body {
     background-size: cover;
 
     @media (min-width: $desktop) {
+        // Designed by Freepik
         background-image: url("../assets/desktop.jpg");
     }
 }
@@ -277,13 +277,10 @@ header {
                 width: 90%;
                 height: 80%;
                 justify-content: center;
-                padding-top: 1em;
-        
             }
             @media (orientation: portrait) {
                 width: 85%;
                 height: 70vh;
-                // justify-content: flex-start;
                 justify-content: center;
             }
             @media (min-width: 600px) and (max-width: 1000px) and (orientation: landscape) {
@@ -354,7 +351,7 @@ header {
             h2 {
                 text-align: center;
                 font-size: 1.4em;
-                padding: 1em;
+                padding-bottom: 1em;
                 @media (min-width: $desktop) {
                     font-size: 2.5em;
                     // padding-bottom: 1.5em;   // padding-bottom: 1.5em;
@@ -366,18 +363,26 @@ header {
                     font-size: 3vh;
                 }
             }
-
+            &--txt {
+                overflow: auto;
+                padding: 1.5em;
+                text-align: center;
+                width: 100%;
+                margin: 0 auto;
+                @media (min-width: $desktop) {
+                    width: 90%;
+                }
+            }
             p {
                 font-size: 0.8em;
-                width: 80%;
                 padding-bottom: 1em;
+                line-height: 1.8em;
                 @media (min-width: $desktop) {
                     font-size: 1.2em;
                 }
                 @media (min-width: 600px) and (max-width: 1100px) and (orientation: landscape) {
                     font-size: 0.8em;
                     padding-bottom: 1.2em;
-                    width: 90%;
                 }
                 @media (min-width: 600px) and (max-width: 800px) and (orientation: portrait) {
                     font-size: 1.5vh;
@@ -393,9 +398,9 @@ header {
             }
         }
 
-        .txt-scroll {
-            overflow: scroll;
-        }
+        // .txt-scroll {
+        //     overflow: scroll;
+        // }
         .buttons-container {
             display: flex;
             justify-content: space-between;
