--- a/scss/main.css
+++ b/scss/main.css
@@ -16,10 +16,8 @@ body {
   content: "";
   display: block;
   position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   z-index: -10;
   background: url("../assets/mobile.jpg") no-repeat center center;
   background-size: cover;
@@ -587,6 +585,21 @@ header h2 {
   z-index: 1;
   left: 20px;
   top: 10%;
+}
+
+.portfolio-box ::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+  background: #000;
+}
+
+.portfolio-box ::-webkit-scrollbar-thumb {
+  background: #131111;
+  -webkit-border-radius: 10px;
+}
+
+.portfolio-box ::-webkit-scrollbar-corner {
+  background: #000;
 }
 
 .portfolio-box .buttons-container {
